--- a/procedure/code/raster_version.Rmd
+++ b/procedure/code/raster_version.Rmd
@@ -50,6 +50,10 @@ lc_study_clip <- mask(crop(landcover, extent(bounds)), bounds)
 
 ```
 
+```{r}
+plot(lc_study_clip)
+```
+
 3a. Warp (reproject) output_2a ["lc_study_clip"] to CRS=32736.
 
 
@@ -58,12 +62,17 @@ Outputs: unnamed_intermediate "initial_raster_clip_proj"
 Possible functions: raster::projectRaster
 ```{r}
 
-lc_study_clip_reproj <- projectRaster(lc_study_clip, crs=32736)
+lc_study_clip_reproj <- projectRaster(lc_study_clip, crs=32736, filename="lc_study_clip_reproj")
 
 ```
 
+```{r}
+plot(lc_study_clip_reproj)
+```
 
 4a. Reclassify landcover by table.
+
+Unplanned deviation: changed reclass table
 
 Inputs: "lc_study_clip"
 Outputs: unnamed intermediate "lc_reclass"
@@ -73,11 +82,15 @@ Possible functions: raster::reclassify
 # Data source: the online Google Drive folder flowchart
 
 c1 <- c(0,1,2,3,4,5,6,7,8,9)
-c2 <- c(0,1,2,3,4,5,6,7,8,255)
-c3 <- c(0,0.75,0,0.25,0,0.25,1,0.5,0.25,0)
+c2 <- c(0,2,3,4,5,6,7,8,9,255)
+c3 <- c(0,0.75,0.01,0.25,0.01,0.15,1,0.1,0.15,0)
 reclass_table <- as.matrix(data.frame(c1, c2, c3))
 
-lc_reclass <- reclassify(lc_study_clip_reproj, reclass_table)
+lc_reclass <- reclassify(lc_study_clip_reproj, reclass_table, filename="lc_reclass", right=F, overwrite=T)
+```
+
+```{r}
+plot(lc_reclass)
 ```
 
 
@@ -118,22 +131,32 @@ secondary_roads_raster <- st_as_raster(secondary_roads_raster) %>% setExtent(ext
 
 ```
 
+```{r}
+plot(secondary_roads_raster)
+
+```
+
 Major Roads
+
+Unplanned deviation: buffer after rasterizing
 
 ```{r}
 major_roads <- here("data", "raw", "public", "major_roads_vector.shp") %>% st_read()
 
 major_roads_reproj <- major_roads %>% st_transform(crs=32736)
 
-major_roads_buff <- major_roads_reproj %>% st_buffer(dist=300,
-  nQuadSegs = 5,
-  endCapStyle = "ROUND",
-  joinStyle = "ROUND",
-  mitreLimit = 2)
+major_roads_raster <- st_rasterize(major_roads_reproj)
 
-major_roads_raster <- st_rasterize(major_roads_buff)
+major_roads_raster <- st_as_raster(major_roads_raster)
 
-major_roads_raster <- st_as_raster(major_roads_raster) %>% setExtent(extent(lc_study_clip_reproj)) %>% resample(lc_study_clip_reproj)
+major_roads_buff <- major_roads_raster %>% buffer(width=300)
+
+major_roads_raster <- major_roads_buff %>% setExtent(extent(lc_study_clip_reproj)) %>% resample(lc_study_clip_reproj)
+
+```
+
+```{r}
+plot(major_roads_raster)
 
 ```
 
@@ -146,16 +169,26 @@ rural_reproj <- rural %>% st_transform(crs=32736)
 
 ```
 
+```{r}
+plot(rural_reproj)
+
+```
+
 Buildings
 
 ```{r}
-buildings <- here("data", "raw", "public", "merged_buildings.shp") %>% st_read()
+buildings <- here("data", "raw", "public", "merged_buildings.shp") %>% st_read() %>% st_as_stars()
 
 buildings_reproj <- buildings %>% st_transform(crs=32736)
 
 ```
 
+```{r}
+plot(buildings_reproj)
 
+```
+
+Figure out why buildings are not rasterizing properly and why bomas are off
 
 ```{r}
 
@@ -171,10 +204,32 @@ merged_buildings <- overlay(buildings_raster, rural_raster, fun=function(x,y){re
 
 ```
 
+```{r}
+plot(buildings_raster)
 
-make proximity raster using distance function
+```
 
-reclassify proximity raster
+Figure out why proximity takes so long
+
+```{r}
+proximity = distance(merged_buildings)
+
+plot(proximity)
+
+```
+
+Reclassify proximity raster
+
+```{r}
+c1 <- c(0, 1, 50, 100, 150, 200)
+c2 <- c(1, 50, 100, 150, 200, 1000)
+c3 <- c(1, 0.8, 0.6, 0.4, 0.2, 0)
+prox_reclass_table <- as.matrix(data.frame(c1, c2, c3))
+
+prox_reclass <- reclassify(proximity, prox_reclass_table)
+```
+
+
 
 6a. Rasterize buffer zone.
 
